Fixed align issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -114,3 +114,7 @@ nav .nav-wrapper i {
 .idented-10{
   padding-left: 10em;
 }
+
+.half{
+  width: 50%;
+}
